# MCPower

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build_aot.py  deny.toml  flow_diagram.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py
.cargo/: config.toml  mutants.toml
.github/: FUNDING.yml
benchmarks/: .gitignore  Manifest.toml  Project.toml  README.md  benchmark_cases.json  cases.jl  cases.py  combine.py  diagnose_loops.py  harness.R  harness.jl  harness.py  loops_jl.jl  loops_py.py  loops_r.R  power_agreement.py  run_all.sh  runtests.jl  smoke_tools.R  test_benchmark.py  tools_r.R
configs/: config.json  plot-html-template.html  plot-themes.json  scenarios.json
crates/engine-app-spec/: Cargo.toml  README.md
crates/engine-app-spec/src/: app_spec.rs  assemble.rs  driver.rs  error.rs  formula_parse.rs  lib.rs  plot.rs  progress.rs
crates/engine-app-spec/tests/: anova_pairwise_contrasts.rs  anova_run_paths.rs  app_spec_roundtrip.rs  app_spec_roundtrip_logit.rs  assemble_linear.rs  assemble_logit.rs  contrasts.rs  driver_smoke.rs  formula_suite.rs  mixed.rs  plot_specs.rs  progress.rs  single_core_twins.rs  upload_test.rs
crates/engine-app-spec/tests/snapshots/: assemble_linear__assemble_linear_matches_golden_projection.snap  assemble_logit__assemble_logit_matches_golden_projection.snap  mixed__assemble_mixed_matches_golden_projection.snap
crates/engine-contract/: Cargo.toml
crates/engine-contract/src/: config.rs  contract.rs  design.rs  distribution.rs  error.rs  estimator.rs  fixtures.rs  generation.rs  ids.rs  lib.rs  outcome.rs  plot_theme.rs  scenarios.rs  scenarios_config.rs  test_spec.rs  validate.rs
crates/engine-contract/tests/: config.rs  correction_method.rs  distribution_enum.rs  free_validate.rs  invariants.rs  plot_theme.rs  scenarios_config.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: batch.rs  contract_adapter.rs  correction.rs  correlation.rs  critvals.rs  data_gen.rs  distributions.rs  glm.rs  glm_dgp_tests.rs  glmm.rs  introspect.rs  lib.rs  lme.rs  lmm.rs  mixed_workspace.rs  ols.rs  philox.rs  posthoc.rs  rng.rs  scenarios.rs  simd_transcendental.rs  spec.rs  workspace.rs
crates/engine-core/src/marginals/: mod.rs  t3.rs
crates/engine-core/tests/: golden_rng.rs  lmm_parity.rs  rng_byte_identity.rs  test_contrast_power.rs  test_heterogeneity_ceiling.rs  test_heterogeneity_lme.rs  test_heteroskedasticity_definition.rs  test_interactions_power.rs  test_overall_tests.rs  test_scenario_heterogeneity.rs  test_t3_marginal.rs  test_truth_start.rs  test_upload_bootstrap.rs  test_upload_norta.rs  warmstart_determinism.rs
crates/engine-core/tests/fixtures/: glmm_hessian_vcov.json
crates/engine-orchestrator/: Cargo.toml
crates/engine-orchestrator/src/: aggregation.rs  cancel.rs  debug.rs  find_power.rs  find_sample_size.rs  fit.rs  grid.rs  lib.rs  merge.rs  plot.rs  progress.rs  result.rs  result_host.rs  scenario_loop.rs  single_core.rs
crates/engine-orchestrator/tests/: clustered_grid.rs  clustered_ols_smoke.rs  crossed_slope_power.rs  factor_preflight.rs  mc_path_exit_gate.rs  merge_unit.rs  no_python_patching.rs  plot.rs  posthoc_dispatch.rs  single_core_equivalence.rs  test_aggregation.rs  test_cancel.rs  test_debug_report.rs  test_find_power.rs  test_find_sample_size.rs  test_formula_report_indices.rs  test_grid.rs  test_load_data.rs  test_progress.rs  test_result_types.rs  wald_se_modes.rs  wald_se_timing.rs
crates/engine-orchestrator/tests/common/: mod.rs
crates/engine-orchestrator/tests/snapshots/: plot__curve_grid_bare.snap  plot__curve_grid_ci_band_only.snap  plot__curve_grid_with_ci_and_target_line.snap  plot__curve_multi_scenario_faceted.snap  plot__joint_multi_scenario_faceted.snap  plot__joint_single_scenario.snap  plot__power_at_n_multi_bare.snap  plot__power_at_n_single_bare.snap  plot__power_at_n_single_with_ci.snap  plot__power_at_n_single_with_ci_and_target_line_and_title.snap
crates/engine-py/: Cargo.toml
crates/engine-py/src/: errors.rs  lib.rs  orchestrator_bridge.rs  plot_bridge.rs  report_bridge.rs  spec_builder_bridge.rs
crates/engine-r/: Cargo.toml  README.md
crates/engine-r/src/: debug_bridge.rs  lib.rs  orchestrator_bridge.rs  plot_bridge.rs  progress.rs  report_bridge.rs  spec_builder_bridge.rs
crates/engine-spec-builder/: Cargo.toml
crates/engine-spec-builder/src/: assignments.rs  correlation.rs  error.rs  formula.rs  input.rs  lib.rs  project_contract.rs  skeleton.rs  targets.rs  upload.rs  validate.rs  variables.rs
crates/engine-spec-builder/tests/: assignments.rs  golden_test.rs  pipeline_test.rs  random_effects_parse.rs  random_effects_shape.rs  upload_test.rs
crates/engine-spec-builder/tests/common/: mod.rs
crates/engine-spec-builder/tests/golden/: linear_2predictors_no_corr.json  linear_with_factor_3lvl.json
crates/engine-wasm/: Cargo.toml  README.md
crates/engine-wasm/src/: lib.rs
crates/engine-wasm/tests/: native_roundtrip.rs  wasm_roundtrip.rs
docs/: citation.md  conf.py  index.md  limitations.md
documentation/: index.md
examples/: 01_basic_power.py  02_sample_size.py  03_interactions.py  04_correlations.py  05_multiple_testing.py  06_own_data.py
mcpower/: __init__.py  base.py  core.py  linear_regression.py  model.py  progress.py
paper/: paper.bib  paper.md
scripts/: bench.sh  deploy-site.sh  fit_norm_inv_cdf.py  gen-og-card.py  gen_formula_goldens.py  generate_tables.py  lme_devfun_theta1.R  lme_handcompute_theta1.py  lme_reference_mixedlm.py  posthoc_contrast_golden.R  preview-docs.sh  profile-wasm.sh  profile.sh  test-wasm.sh  test_quick.py
scripts/wasm-strip-relaxed/: Cargo.toml
scripts/wasm-strip-relaxed/src/: main.rs
site/: index.html  style.css
site-functions/: package.json  pnpm-lock.yaml
tests/: LME_BENCHMARK_TESTS.md  config.py  conftest.py  test_data_generation.py  test_edge_cases.py  test_formatters.py  test_jit_backend.py  test_lookup.py  test_model.py  test_ols.py  test_parallel.py  test_parsers.py  test_progress.py  (+6 more)
(+1686 files in other folders)
