[workspace]
members = [
    "crates/engine-contract",
    "crates/engine-core",
    "crates/engine-orchestrator",
    "crates/engine-spec-builder",
    "crates/engine-py",
    "crates/engine-r",
    "crates/engine-app-spec",
    "crates/engine-wasm",
    "ports/app/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"          # floor set by the bobyqa dep (edition 2024, MSRV 1.85);
                               # the workspace's own needs (`#[expect]`, lint `reason =`) stop at 1.81
license = "GPL-3.0-or-later"

[workspace.lints.rust]
# Baseline for all members; the pure-Rust engine crates harden to `forbid`
# via `#![forbid(unsafe_code)]` in their lib.rs. The FFI adapters
# (engine-py/-r/-wasm, ports/app/src-tauri) keep this `warn` — their only
# `unsafe` is external-macro-generated and does not fire the lint.
unsafe_code = "warn"

[workspace.lints.clippy]
# Group priority -1 lets item-level `#[expect(clippy::…)]` (priority 0) override.
# Advisory (`warn`) until the remaining clippy::all findings are resolved; flip
# to `deny` once the tree is clean to turn this into a correctness gate.
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
panic = "unwind"      # explicit — FFI adapters need unwind for clean host-exception surface
