[build-system]
requires = ["setuptools>=61.0,<69.0.0", "wheel", "numpy>=1.26.0", "numba>=0.58.0", "scipy>=1.11.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcpower", "mcpower.utils"]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"mcpower.utils" = ["*.so", "*.pyd", "*.dll", "*_compiled*"]