[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11>=2.11",
    "numpy>=2.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "MCPower"
version = "0.4.2"
description = "Monte Carlo Power Analysis for Statistical Models"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Paweł Lenartowicz", email = "pawellenartowicz@europe.com"}
]
keywords = ["power analysis", "statistics", "monte carlo", "linear regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
JIT = ["numba>=0.61.0"]
lme = ["statsmodels>=0.14.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    "mypy>=1.8.0",
]
all = [
    "numba>=0.61.0",
    "statsmodels>=0.14.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pawlenartowicz/MCPower"
Documentation = "https://github.com/pawlenartowicz/MCPower#readme"
Repository = "https://github.com/pawlenartowicz/MCPower"
Issues = "https://github.com/pawlenartowicz/MCPower/issues"

[tool.scikit-build]
wheel.packages = ["mcpower"]
cmake.minimum-version = "3.15"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
strict-config = false

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "lme: LME mixed-effects model tests",
]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning:statsmodels",
    "ignore:Mixed-effects models are experimental:UserWarning",
]

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4"]
ignore = [
    "B028",  # No explicit stacklevel in warnings.warn (too noisy)
]

[tool.ruff.lint.isort]
known-first-party = ["mcpower"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build", "dist", "tests"]
