[package]
name = "engine-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false           # internal engine crate — channels are PyPI/CRAN/GH/web, never crates.io

[lints]
workspace = true

[features]
test-fixtures = []

[dependencies]
glmm       = { version = "0.1", default-features = false }   # published crate; constants re-export only — no loop_advanced feature. 0.1.x is parity-stable (goldens), a 0.2 bump is deliberate; caret stops below 0.2.0.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"

[dev-dependencies]
engine-contract = { path = ".", features = ["test-fixtures"] }
rmp-serde  = "1"
rmpv       = { version = "1", features = ["with-serde"] }
