[package]
name = "engine-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false           # internal engine crate — channels are PyPI/CRAN/GH/web, never crates.io

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
engine-contract = { path = "../engine-contract" }
engine-core = { path = "../engine-core" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
indexmap    = "2"

[dev-dependencies]
rayon       = "1.10"
engine-contract = { path = "../engine-contract", features = ["test-fixtures"] }
engine-spec-builder = { path = "../engine-spec-builder" }
approx = "0.5"
rmp-serde = "1"
insta = { version = "1", features = ["json"] }
