[package]
name = "engine-py"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "_engine"
crate-type = ["cdylib"]

[features]
# `test-bridge` exposes the raw `build_contract_from_json` back-door for
# Python tests. The release wheel must not enable it — keeping the symbol
# out of production avoids locking the raw `SimulationContract` shape into
# the public surface.
test-bridge = []

[dependencies]
engine-contract     = { path = "../engine-contract" }
engine-core         = { path = "../engine-core" }
engine-orchestrator = { path = "../engine-orchestrator" }
engine-spec-builder = { path = "../engine-spec-builder" }
pyo3                = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy               = "0.22"
rmp-serde           = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
