[package]
name = "engine-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false           # PyO3 cdylib — shipped as a PyPI wheel, never crates.io

[lints]
workspace = true

[lib]
name = "_engine"
crate-type = ["cdylib"]

[features]
# `test-bridge` exposes the raw `build_contract_from_json` back-door for
# Python tests. The release wheel must not enable it — keeping the symbol
# out of production avoids locking the raw `SimulationContract` shape into
# the public surface.
test-bridge = []

[dependencies]
engine-contract     = { path = "../engine-contract" }
engine-core         = { path = "../engine-core" }
engine-orchestrator = { path = "../engine-orchestrator" }
engine-spec-builder = { path = "../engine-spec-builder" }
pyo3                = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rmp-serde           = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
