[package]
name = "engine-spec-builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
engine-contract = { path = "../engine-contract" }
engine-core = { path = "../engine-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
rmp-serde = "1"
