[package]
name = "engine-spec-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false           # internal engine crate — channels are PyPI/CRAN/GH/web, never crates.io

[lints]
workspace = true

[dependencies]
engine-contract = { path = "../engine-contract" }
engine-core = { path = "../engine-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rmp-serde = "1"
