[package]
name = "engine-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "WASM adapter for the MCPower engine — wasm-bindgen marshalling shell over engine-app-spec"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-app-spec     = { path = "../engine-app-spec" }
engine-orchestrator = { path = "../engine-orchestrator" }
# Bench-tooling exception: the dev-only bench entry mirrors the native
# throughput bin by calling engine-core's run_batch_st directly. Not contract
# surface — adapters otherwise bind only through engine-app-spec/orchestrator,
# and this package is private and unpublished.
engine-core         = { path = "../engine-core" }
wasm-bindgen        = "0.2"
js-sys              = "0.3"
serde_json          = "1"

# `getrandom` is pulled transitively (rand → getrandom) and refuses to compile
# for wasm*-unknown-unknown without the `js` feature. Declaring it here (wasm
# target only) flips that feature on via Cargo feature unification. The seeded
# single-core RNG path never calls it at runtime; this only satisfies the link.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test  = "0.3"
engine-contract    = { path = "../engine-contract" }

# wasm-pack --profiling defaults wasm-opt to ['-O'] WITHOUT -g, which strips the
# wasm name section despite the profile's documented intent (wasm-pack #797) —
# scripts/profile-wasm.sh would get anonymous wasm-function[N] symbols. Only the
# --profiling artifact is affected; release/deployment builds keep the default.
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '-g']
